--- a/soderzhanie.html
+++ b/soderzhanie.html
@@ -149,7 +149,7 @@
 	</div>
 </div><div class="b b-s b-s-t150 b-s-b150 b-btn b-btn-5 wnd-align-center">
 	<div class="b-btn-c i-a">
-		<a class="b-btn-l" href="./INDEX.HTML">
+		<a class="b-btn-l" href="./index.HTML">
 			<span class="b-btn-t">ГЛАВНАЯ</span>
 		</a>
 	</div>
