--- a/kontakty.html
+++ b/kontakty.html
@@ -125,7 +125,7 @@
 	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"><p><font class="wsw-02 wnd-font-size-110"><strong><font class="wnd-font-size-110">УСЛУГИ ВЫПОЛНЯЕТ:&nbsp;</font></strong></font></p><font class="wsw-02 wnd-font-size-110"><div><strong><font class="wnd-font-size-110">Дмитрий Сергеевич<br>&nbsp;</font></strong></div><div><strong><font class="wnd-font-size-110">ДАННЫЕ ДЛЯ СВЯЗИ:</font></strong></div><h2><strong><font class="wnd-font-size-110">+7 (900) 185 94 47&nbsp;</font></strong></h2><div><strong><font class="wnd-font-size-110">Telegram-</font></strong><strong style="font-size: 19.2px; color: rgb(14, 75, 156); letter-spacing: 0px;"><a href="https://t.me/Dima_Ginkel" rel="nofollow" target="_blank">ПЕРЕЙТИ</a></strong></div></font><font class="wsw-02 wnd-font-size-110"><div><strong><font class="wnd-font-size-110">VK-</font></strong><strong style="color: rgb(14, 75, 156); font-size: 19.2px; letter-spacing: 0px;"><a href="https://vk.com/dmitry_ginkel" rel="nofollow" target="_blank">ПЕРЕЙТИ</a></strong></div></font><font class="wsw-02 wnd-font-size-110"><div><strong><font class="wnd-font-size-110">Mail- si60656700@gmail.com</font></strong></div></font><div><br></div></div>
 </div><div class="b b-s b-s-t150 b-s-b150 b-btn b-btn-5 wnd-align-left">
 	<div class="b-btn-c i-a">
-		<a class="b-btn-l" href="./index.HTML">
+		<a class="b-btn-l" href="./index.html">
 			<span class="b-btn-t">На главную</span>
 		</a>
 	</div>
