stoimost-uslug.html

--- a/stoimost-uslug.html
+++ b/stoimost-uslug.html
@@ -132,7 +132,7 @@
 </div>
 </div>
 				<div class="b b-text cf">
-	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"><p class="wnd-align-justify"><strong style="color: var(--ac-color); font-size: 1.5rem; letter-spacing: 0px; text-align: inherit;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; от 300-500 р</strong><strong style="color: var(--ac-color); font-size: 1.5rem; letter-spacing: 0px; text-align: inherit;">уб.</strong></p>
+	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"><p class="wnd-align-justify"><strong style="color: var(--ac-color); font-size: 1.5rem; letter-spacing: 0px; text-align: inherit;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; от 250-500 р</strong><strong style="color: var(--ac-color); font-size: 1.5rem; letter-spacing: 0px; text-align: inherit;">уб.</strong></p>
 </div>
 </div>
 			</div>
@@ -143,7 +143,7 @@
 </div>
 </div>
 				<div class="b b-text cf">
-	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"><h3><strong><br></strong></h3><h3><strong>от 100 руб.</strong></h3>
+	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"><h3><strong><br></strong></h3><h3><strong>от 50-100 руб.</strong></h3>
 </div>
 </div>
 			</div>
@@ -185,7 +185,7 @@
 	<span class="it-c"><font class="wnd-font-size-90">РЕМОНТ КОМПЬЮТЕРНОЙ ТЕХНИКИ (КОМПЬЮТЕРОВ, НОУТБУКОВ.и т.п)<br>ВОЗМОЖЕН РЕМОНТ И НАСТРОЙКА ТЕЛЕФОНОВ, ТЕЛЕВИЗОРОВ, ТВ ПРИСТАВОК, РОУТЕРОВ И д.р.*</font></span>
 </span></div>
 						<div class="s-f-cr"><span class="it b link">
-	<span class="it-c">Последние обновление 27.08.2025&nbsp;</span>
+	<span class="it-c">Последние обновление 13.10.2025&nbsp;</span>
 </span></div>
 					</div>
 					
