--- a/stoimost-uslug.html
+++ b/stoimost-uslug.html
@@ -159,6 +159,7 @@
 	</div>
 </div><div class="b b-text cf">
 	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"></div>
+<p><font class="wsw-37"><font class="wnd-font-size-80" data-k0="false">постоянным клиентам скидка 3% </font></font></p>
 </div></div>
 </div>
 			</div>
