--- a/uslugi.html
+++ b/uslugi.html
@@ -124,7 +124,7 @@
 	<div class="ez-c"><div class="b b-text cf">
 	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"><p><font class="wsw-40"><font class="wnd-font-size-80" data--j_="false"><strong>ВНИМАНИЕ<em>!</em></strong></font></font><font class="wnd-font-size-80 wsw-41" data--j_="false" style=""><strong style=""><em> ИНФОРМАЦИЯ ВРЕМЕННАЯ ВСЕ ПОДРОБНОСТИ УТОЧНЯЙТЕ У РАБОТОДАТЕЛЯ!</em></strong></font></p></div>
 </div><div class="b b-text cf">
-	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"><h2><strong>ВАЖНО:</strong></h2><font class="wsw-02"><div><strong>1) УСЛУГИ ВЫПОЛНЯЮТСЯ ТОЛЬКО ПО РОСТОВСКОЙ ОБЛАСТИ .</strong></div><div><strong>2) ВЫЕЗД НА ДОМ "временно" ОСУЩЕСТВЛЯЕТСЯ ТОЛЬКО ПО ТАЦИНСКОМУ РАЙОНУ .</strong></div><div><strong>3)ВРЕМЯ РАБОТЫ:</strong></div><div><strong>Пн-пт: С 10:00 ПО 17:00</strong></div><div><strong>Сб-вс: С 10:00 ПО 15:00</strong></div></font></div>
+	<div class="b-c b-text-c b-s b-s-t60 b-s-b60 b-cs cf"><h2><strong>ВАЖНО:</strong></h2><font class="wsw-02"><div><strong>1) УСЛУГИ ВЫПОЛНЯЮТСЯ ТОЛЬКО ПО РОСТОВСКОЙ ОБЛАСТИ .</strong></div><div><strong>2) ВЫЕЗД НА ДОМ ОСУЩЕСТВЛЯЕТСЯ ТОЛЬКО ПО ТАЦИНСКОМУ РАЙОНУ .</strong></div><div><strong>3)ВРЕМЯ РАБОТЫ:</strong></div><div><strong>Пн-пт: С 10:00 ПО 17:00</strong></div><div><strong>Сб-вс: С 10:00 ПО 15:00</strong></div></font></div>
 </div><div class="b b-s b-s-t150 b-s-b150 b-btn b-btn-3 wnd-align-center">
 	<div class="b-btn-c i-a">
 		<a class="b-btn-l" href="./kontakty.html">
