--- a/kontakty.html
+++ b/kontakty.html
@@ -139,9 +139,10 @@
 			<span class="b-btn-t">СОДЕРЖАНИЕ САЙТА</span>
 		</a>
 	</div>
-</div><span class="sit-w"><span class="sit-c"><font>*ПЕРЕД установкой отключите антивирус</font></span></span>
+</div><span class="sit-w"><span class="sit-c"><font>*перед установкой пожалуйста отключите антивирус</font></span></span>
 </span></h1></div>
-</div>
+</div><span class="sit-w"><span class="sit-c"><font></font></span></span>
+</span></h1>
 			</div>
 		</div>
 	</div>
