--- a/kontakty.html
+++ b/kontakty.html
@@ -176,10 +176,22 @@
 </span>
 </h1>
 </div>
+</div>
+</h1>
+</div>
+</div>
 </section>
 </div>
 </div>
 </main>
+<footer class="l-f cf">
+<div class="sw cf">
+<div class="sw-c cf">
+<section data-wn-border-element="s-f-border" class="s s-f s-f-double s-f-simple sc-w   wnd-w-wider wnd-s-higher">
+<div class="s-w">
+<div class="s-o">
+<div class="s-bg">
+<div class="s-bg-l">
 </div>
 </div>
 <div class="s-c s-f-l-w s-f-border border-top">
